5/31/2005
	- 2.0.0 released.

5/16/2005
	- Fix the code to deal with TTL 0 data in the Cache.

5/15/2005
	- Add unit tests for many classes.  The unit tests are located
	  in the tests directory, which mirrors the org.xbill.DNS hierarchy.
	  (Matt Rutherford <rutherfo@cs.colorado.edu>)

5/7/2005
	- Fix several problems with empty names.
	  (Matt Rutherford <rutherfo@cs.colorado.edu>)  

4/23/2005
	- As per RFC 2181, the maximum allowed TTL value is 0x7FFFFFFF.
	  Change TTL.parseTTL() to reflect this by silently clamping
	  larger 32 bit values.

4/22/2005
	- Attempting to get the name/type/class/ttl of an empty RRset
	  throws an exception.

4/21/2005
	- Remove RRset.getSecurity()/.setSecurity().

4/16/2005
	- Change the internal representation of empty records (that is,
	  records in the question section of a message or meta-records
	  used in dynamic update).
	- Minor cleanups to the Mnemonic class.
	  (Matt Rutherford <rutherfo@cs.colorado.edu>)

4/3/2005
	- Change the Cache from being periodically cleaned to being
	  size-bounded.  (based on a patch from several years ago
	  from Joseph Shraibman <jks@iname.com>).
	- Remove the FindServer class.
	- Added a Name Service Provider interface (dns,dnsjava).
	  (based on code from Paul Cowan <pwc21@yahoo.com>)

4/1/2005
	- Use java.nio classes for sockets internally, which provide a
	  number of improvements, most visibly improved timeouts.
	- Remove deprecated dns class.
	- Simplify TSIG initialization; remove functions that should
	  have never existed.
	- Remove Cache.setVerifier() and Cache.setSecurePolicy().  There
	  should be a way of enabling DNSSEC, but the existing code doesn't
	  work.
	- Change the Zone constructors/factory methods to be consistent.

3/29/2005
	- Use java.net.InetAddress for IPv6 addresses rather than a custom
	  class.

3/20/2005
	- Fix several bugs in ResolverConfig on Windows.
	  (Brian McBarron <bmcbarron@users.sourceforge.net>)

3/15/2005